<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cloudDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="editText">请输入要搜索的关键字</string>
    <string name="textView">提示</string>
    <string name="search">搜索</string>
    <string name="closeSearch">&lt;</string>
    <string name="address">杭州 V</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="addresstitle">城市切换</string>
    <string name="GPStitle">GPS定位城市</string>
    <string name="hangzhou">杭州</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_four">FourActivity</string>
    <string name="title_activity_third">ThirdActivity</string>

</resources>
