<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addresslayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:textSize="20sp"
	    android:text="@string/addresstitle"/>
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#ffabd1dc"
	    android:text="@string/GPStitle"/>
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#ffffffff"
	    android:text="@string/hangzhou"/>
</LinearLayout>

