<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- <AutoCompleteTextView 
        android:id="@+id/autoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/> -->
    <RelativeLayout 
        android:id="@+id/searchListView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
    	android:background="#ff3495E2"
    	>
        
        <ImageButton 
            android:id="@+id/closeSearch"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="20dp"
            android:src="@drawable/back"
            android:contentDescription="@string/closeSearch"
            />
        
        <EditText
	        android:id="@+id/editText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:minWidth="250dp"
	        android:minHeight="35dp"
	        android:hint="@string/editText"
	        android:background="#ffffffff"
	        android:layout_centerInParent="true"/>
        
        <ImageButton
            android:id="@+id/search"
	        android:layout_width="60dp"
	        android:layout_height="35dp"
	        android:layout_centerInParent="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="4dp"
	        android:background="#ff3495e2"
            android:src="@drawable/search"
            android:contentDescription="@string/search"
            />
    </RelativeLayout>
    
    <ListView 
        android:id="@+id/searchlistView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>
